Colaboratory を使用して作成しました

--- a/store_sales/store_sales_rnn_seq2vec.ipynb
+++ b/store_sales/store_sales_rnn_seq2vec.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ozakiryota/kaggle/blob/main/store_sales/store_sales_rnn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ozakiryota/kaggle/blob/main/store_sales/store_sales_rnn_seq2vec.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -421,7 +421,7 @@
         "id": "HVw5Mx7uVRyj",
         "outputId": "68fb45d3-aa30-428f-e7b9-eb44c250c73e"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1675,7 +1675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "dChbM1OBC4n2"
       },
@@ -1693,7 +1693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2980,7 +2980,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3041,7 +3041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "fIuzpP6_O3vu"
       },
@@ -3070,7 +3070,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3110,18 +3110,18 @@
       "source": [
         "## TEST\n",
         "dataset = DatasetMaker(datalist, 16, 16)\n",
-        "labels0 = dataset.__getitem__(index=0)[0]\n",
-        "inputs0 = dataset.__getitem__(index=0)[1]\n",
+        "inputs0 = dataset.__getitem__(index=0)[0]\n",
+        "labels0 = dataset.__getitem__(index=0)[1]\n",
         "print(\"dataset.__len__() =\", dataset.__len__())\n",
         "print(\"labels0 =\\n\", labels0)\n",
-        "print(\"labels0.shape =\\n\", labels0.shape)\n",
+        "print(\"labels0.shape =\", labels0.shape)\n",
         "print(\"inputs0 =\\n\", inputs0)\n",
-        "print(\"inputs0.shape =\\n\", inputs0.shape)"
+        "print(\"inputs0.shape =\", inputs0.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3292,7 +3292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "Lyen2FGkgGmB"
       },
@@ -3319,7 +3319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3365,7 +3365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3459,6 +3459,9 @@
         "        self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "        print(\"self.device = \", self.device)\n",
         "\n",
+        "        self.num_epochs = num_epochs\n",
+        "        self.save_weights_path = save_weights_path\n",
+        "\n",
         "        datalist = makeDataList(csv_path)\n",
         "        past_size = 16\n",
         "        future_size = 16\n",
@@ -3468,7 +3471,6 @@
         "        train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
         "        val_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=False)\n",
         "        \n",
-        "        self.num_epochs = num_epochs\n",
         "        self.dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
         "        self.net = Network(\n",
         "            input_dim = train_dataset.__getitem__(index=0)[0].shape[1],\n",
@@ -3485,8 +3487,6 @@
         "        ## time\n",
         "        start_clock = time.time()\n",
         "        ## record\n",
-        "        record_train_loss = []\n",
-        "        record_val_loss = []\n",
         "        record_loss_dict = {\"train\": [], \"val\": []}\n",
         "        min_loss_epoch = 0.0\n",
         "        ## loop\n",
@@ -3529,7 +3529,7 @@
         "            ## save\n",
         "            if epoch == 0 or record_loss_dict[\"val\"][-1] < min_loss_epoch:\n",
         "                min_loss_epoch = record_loss_dict[\"val\"][-1]\n",
-        "                torch.save(self.net.state_dict(), save_weights_path)\n",
+        "                torch.save(self.net.state_dict(), self.save_weights_path)\n",
         "        ## time\n",
         "        mins = (time.time() - start_clock) // 60\n",
         "        secs = (time.time() - start_clock) % 60\n",
@@ -3569,7 +3569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "iVoPgqpCva4O",
         "colab": {
@@ -3686,7 +3686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "auZnpDhXQbzA",
         "colab": {
@@ -3716,7 +3716,7 @@
         "    print(\"Type 'y' or 'n'\")\n",
         "    ans = input()\n",
         "if ans == \"y\":\n",
-        "    !kaggle competitions submit -c store-sales-time-series-forecasting -f submission.csv -m \"store_sales_rnn.ipynb\""
+        "    !kaggle competitions submit -c store-sales-time-series-forecasting -f submission.csv -m \"store_sales_rnn_seq2vec.ipynb\""
       ]
     },
     {
@@ -3733,9 +3733,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "store_sales_rnn.ipynb",
+      "name": "store_sales_rnn_seq2vec.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/3lLqjW2S0KOcKigbxbPn",
+      "authorship_tag": "ABX9TyMGLLRIG61g0cWi9pvmuRNW",
       "include_colab_link": true
     },
     "kernelspec": {
