Colaboratory を使用して作成しました

--- a/store_sales/store_sales_rnn_seq2seq.ipynb
+++ b/store_sales/store_sales_rnn_seq2seq.ipynb
@@ -48,10 +48,10 @@
               "status_text": ""
             }
           },
-          "height": 97
+          "height": 43
         },
         "id": "MtAsLdCvCNbX",
-        "outputId": "d86a45b7-6e39-47b2-cb90-8963015574ff"
+        "outputId": "d3c96c76-2544-4c6d-bc0a-e847763325b7"
       },
       "outputs": [
         {
@@ -59,9 +59,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-f14f2bfa-d60a-47dd-be65-1c79df12ad00\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-a3fb21e5-5606-4a95-b8c5-49c6cc7d276a\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-f14f2bfa-d60a-47dd-be65-1c79df12ad00\">\n",
+              "     <output id=\"result-a3fb21e5-5606-4a95-b8c5-49c6cc7d276a\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -72,14 +72,6 @@
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving kaggle.json to kaggle.json\n",
-            "User uploaded file 'kaggle.json' with length 66 bytes\n"
-          ]
         }
       ],
       "source": [
@@ -115,29 +107,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "J9DArlDbBzGo",
-        "outputId": "1cf2bd0b-3c33-4ad7-d366-3bf86e99c575"
+        "id": "J9DArlDbBzGo"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.7/dist-packages (1.5.12)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from kaggle) (4.62.3)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.8.2)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.7/dist-packages (from kaggle) (5.0.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from kaggle) (2.23.0)\n",
-            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.24.3)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.7/dist-packages (from kaggle) (2021.10.8)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.7/dist-packages (from kaggle) (1.15.0)\n",
-            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.7/dist-packages (from python-slugify->kaggle) (1.3)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install kaggle\n",
         "!kaggle competitions download -c store-sales-time-series-forecasting\n",
@@ -374,7 +346,11 @@
         "\n",
         "        self.input_dim = input_dim\n",
         "        self.rnn = nn.RNN(input_dim, hidden_dim, num_layers, batch_first=True)\n",
-        "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+        "        self.fc = self.cnn = nn.Sequential(\n",
+        "            nn.Linear(hidden_dim, 2*hidden_dim),\n",
+        "            nn.Linear(2*hidden_dim, hidden_dim),\n",
+        "            nn.Linear(hidden_dim, output_dim)\n",
+        "        )\n",
         "\n",
         "    def forward(self, x, h):\n",
         "        x, final_h = self.rnn(x, h)\n",
@@ -457,8 +433,8 @@
         "        val_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=False)\n",
         "        self.dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
         "\n",
-        "        hidden_dim = 128\n",
-        "        num_layers = 2\n",
+        "        hidden_dim = 256\n",
+        "        num_layers = 3\n",
         "        self.enc = Encoder(\n",
         "            input_dim = dataset.__getitem__(index=0)[0].shape[1],\n",
         "            hidden_dim = hidden_dim,\n",
@@ -602,8 +578,8 @@
         "        self.past_datalist = datalist.loc[datalist[self.sale_columns[0]].isna() == False][-past_size:]\n",
         "        self.future_datalist = datalist.loc[datalist[self.sale_columns[0]].isna()].drop(self.sale_columns, axis=1)\n",
         "\n",
-        "        hidden_dim = 128\n",
-        "        num_layers = 2\n",
+        "        hidden_dim = 256\n",
+        "        num_layers = 3\n",
         "        self.enc = Encoder(\n",
         "            input_dim = self.past_datalist.shape[1],\n",
         "            hidden_dim = hidden_dim,\n",
@@ -711,7 +687,7 @@
       "collapsed_sections": [],
       "name": "store_sales_rnn_seq2seq.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnvdWYS8T74dvzD15h3Max",
+      "authorship_tag": "ABX9TyPR1sZYnNFVnKuDVNhIUd51",
       "include_colab_link": true
     },
     "kernelspec": {
